[gd_scene format=3 uid="uid://bgjtct27drn0n"]

[ext_resource type="Script" uid="uid://bkpperkole156" path="res://Hud/Gaveta/Gaveta.gd" id="1_scams"]

[node name="Gaveta" type="Control" unique_id=453334875]
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 756.0
offset_top = 7.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scams")
aberto = null
lado = null
ProporcaoAberto = null
ProporcaoFechado = null

[node name="ParteQueSeMeche" type="Control" parent="." unique_id=1525271703]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 393.025
offset_right = 393.0251
offset_bottom = -0.00091552734
grow_horizontal = 2
grow_vertical = 2

[node name="Conteudo" type="Control" parent="ParteQueSeMeche" unique_id=354348211]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColisorDaParteQueMeche" type="ColorRect" parent="ParteQueSeMeche/Conteudo" unique_id=1318832841]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12941177, 0, 0.36862746, 0.14509805)

[connection signal="mouse_entered" from="ParteQueSeMeche/Conteudo/ColisorDaParteQueMeche" to="." method="_on_colisor_da_parte_que_meche_mouse_entered"]
[connection signal="mouse_exited" from="ParteQueSeMeche/Conteudo/ColisorDaParteQueMeche" to="." method="_on_colisor_da_parte_que_meche_mouse_exited"]
